# unimalen

./: .gitignore  APPIMAGE.md  AUTO_UPDATE_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.new  CMakeLists.txt.old  README (Kern Tallett's conflicted copy 2025-10-18).md  README.md  build-appimage.sh  build.sh  grfx.desktop  unimalen.desktop
.claude/: settings.local (Kern Tallett's conflicted copy 2025-10-18).json  settings.local.json
fonts/: README.md
src/: canvas.cpp  canvas.h  colorbar.cpp  colorbar.h  layer.cpp  layer.h  layerpanel.cpp  layerpanel.h  main.cpp  mainwindow (Kern Tallett's conflicted copy 2025-10-18).cpp  mainwindow (Kern Tallett's conflicted copy 2025-10-18).h  mainwindow.cpp  mainwindow.h  patternbar.cpp  patternbar.h  tabwidget.cpp  tabwidget.h  thicknessbar.cpp  thicknessbar.h  toolbar.cpp  toolbar.h
src/core/: Document.cpp  Document.h  Layer.cpp  Layer.h  Page.cpp  Page.h  Types.h  UndoCommands.cpp  UndoCommands.h
src/tools/: BrushTool.cpp  BrushTool.h  EraserTool.cpp  EraserTool.h  LineTool.cpp  LineTool.h  MarkerTool.cpp  MarkerTool.h  PencilTool.cpp  PencilTool.h  Tool.h  ToolManager.cpp  ToolManager.h
src/ui/: DesignTokens.h  StyleSheet.h  UpdateDialog.cpp  UpdateDialog.h
translations/: unimalen_en.ts  unimalen_es.ts
